# FoRecoPy

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: pypi.yaml  release.yaml  test.yml
docs/: about.html  changelog.html  doc_cov.html  doc_fun.html  doc_lsrec.html  doc_tools.html  genindex.html  index.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/forecopy/: cov.html  fun.html  lsrec.html  tools.html
docs/_sources/: about.rst.txt  changelog.rst.txt
docs/_static/: documentation_options.js
forecopy/: cov.py  fun.py  lsrec.py  reco.py  tools.py
forecopy.egg-info/: PKG-INFO
sphinx/source/: conf.py  doc_cov.rst  doc_lsrec.rst  doc_tools.rst  index.rst  overview.rst
sphinx/source/_static/css/: custom.css
tests/: test_lsrec.py
